# KinectFusion-Vulkan

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
dep/jjyouLib/: LICENSE
dep/jjyouLib/include/jjyou/: utils.hpp
dep/jjyouLib/include/jjyou/cuda/: DeviceArray.hpp  utils.hpp
dep/jjyouLib/include/jjyou/geo/: HalfedgeMesh.hpp  HalfedgeMesh_Impl.hpp  IndexedMesh.hpp  IndexedMesh_Impl.hpp
dep/jjyouLib/include/jjyou/gl/: CameraView.hpp  FrameBuffer.hpp  Mesh.hpp  ModelView.hpp  Objects.hpp  Shader.hpp  Window.hpp
dep/jjyouLib/include/jjyou/glsl/: base.hpp  glsl.hpp  linalg.hpp  mat.hpp  qua.hpp  transform.hpp  trigonometric.hpp  vec.hpp
dep/jjyouLib/include/jjyou/glsl/legacy/: vec2.hpp  vec3.hpp  vec4.hpp
dep/jjyouLib/include/jjyou/io/: ArgParser.hpp  IniFile.hpp  Json.hpp  PlyFile.hpp
dep/jjyouLib/include/jjyou/vis/: CameraView.hpp
dep/jjyouLib/include/jjyou/vk/: Context.hpp  Memory.hpp  Swapchain.hpp  Texture.hpp  Vma.hpp  Vulkan.hpp  utils.hpp
dep/jjyouLib/include/jjyou/vk/Legacy/: Device.hpp  Instance.hpp  Loader.hpp  PhysicalDevice.hpp  Texture.hpp
scripts/: shader.py
src/: Application.cpp  Application.hpp  Camera.hpp  DataLoader.cpp  DataLoader.hpp  DescriptorSet.cpp  DescriptorSet.hpp  Engine.cpp  Engine.hpp  KinectFusion.cpp  KinectFusion.hpp  Primitives.cpp  Primitives.hpp  PyramidData.cpp  PyramidData.hpp  TSDFVolume.cpp  TSDFVolume.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp  impl.cpp  main.cpp
src/shader/: bilateralFilter.comp  bilateralFiltering.comp  bilateralFiltering.comp.spv  bilateralFiltering.comp.spv.h  buildLinearFunction.comp  buildLinearFunction.comp.spv  buildLinearFunction.comp.spv.h  buildLinearFunctionReduction.comp  buildLinearFunctionReduction.comp.spv  buildLinearFunctionReduction.comp.spv.h  computeNormalMap.comp  computeNormalMap.comp.spv  computeNormalMap.comp.spv.h  computeVertexMap.comp  computeVertexMap.comp.spv.h  fusion.comp  fusion.comp.spv  fusion.comp.spv.h  halfSampling.comp  halfSampling.comp.spv  image.frag  image.vert  initVolume.comp  initVolume.comp.spv  initVolume.comp.spv.h  lambertianPrimitive.frag  lambertianPrimitive.frag.spv  lambertianPrimitive.frag.spv.h  lambertianPrimitive.vert  lambertianPrimitive.vert.spv  lambertianPrimitive.vert.spv.h  lambertianSurface.frag  lambertianSurface.frag.spv  lambertianSurface.frag.spv.h  rayCasting.comp  rayCasting.comp.spv  rayCasting.comp.spv.h  rayCastingCommon.h  rayCastingICP.comp  rayCastingICP.comp.spv  (+12 more)
src/shader/spv/: bilateralFiltering.comp.spv  buildLinearFunction.comp.spv  buildLinearFunction.comp.spv.h  buildLinearFunctionReduction.comp.spv  buildLinearFunctionReduction.comp.spv.h  computeVertexMap.comp.spv  fusion.comp.spv  halfSampling.comp.spv.h  initVolume.comp.spv  initVolume.comp.spv.h  lambertianPrimitive.frag.spv.h  lambertianSurface.frag.spv  lambertianSurface.frag.spv.h  rayCasting.comp.spv  rayCasting.comp.spv.h  rayCastingICP.comp.spv  rayCastingICP.comp.spv.h  simplePrimitive.frag.spv.h  simplePrimitive.vert.spv  simpleSurface.frag.spv
